fix brand's z-index

--- a/src/stylesheets/brand.scss
+++ b/src/stylesheets/brand.scss
@@ -30,3 +30,6 @@
     }
   }
 }
+#brand {
+  z-index: 15;
+}
